--- a/course-3/style.css
+++ b/course-3/style.css
@@ -14,3 +14,16 @@
     font-size: 17px;
 }
 
+.topnav a:hover{
+    background-color: #ddd;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic; 
+    text-decoration: underline;   
+}
+
+.topnav a.active{
+    /* background-color: #04AA6D;
+    color: white; */
+    float: right;
+}
