--- a/course-3/style.css
+++ b/course-3/style.css
@@ -1,5 +1,4 @@
 /* Add a black background to the top navigation bar */
-
 .topnav {
     background-color: black;
     overflow: hidden;
@@ -30,4 +29,8 @@
 
 .profile{
     border-radius: 70px;
+}
+
+.logo-list {
+    width: 2.5%;
 }
